src/view/overview/render/snapshots/nifi_lens__view__overview__render__tests__nodes_list_cert_chips_mixed.snap
---
source: src/view/overview/render/mod.rs
expression: "format!(\"{}\", term.backend())"
---
"  n1:8443                                         heap ██░░░  50% gc   20ms       load 0.12  0.5              "
"  n3:8443                                         heap ██░░░  50% gc   20ms       load 0.12  0.5              "
"  n3:8443                                         heap ██░░░  50% gc   20ms       load 0.12  0.5 cert 14d     "
"  n4:8443                                         heap ██░░░  50% gc   20ms       load 0.12  0.5 cert 3d      "
"  n5:8443                                         heap ██░░░  50% gc   20ms       load 0.12  0.5 cert expired "
"  n6:8443                                         heap ██░░░  50% gc   20ms       load 0.12  0.5              "
"  repositories                                    cont ██░░░  42% ff  ░░░░░  18%  prov ░░░░   7%              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
