src/view/overview/render/snapshots/nifi_lens__view__overview__render__tests__overview_drift.snap
---
source: src/view/overview/render/tests.rs
expression: out
---
"┌ Components ──────────────────────────────────────────────────────────────────────────────────────┐"
"│  Process groups         7    STALE      1  MODIFIED   2  SYNC-ERR   0  INPUTS     2  OUTPUTS    1│"
"│  Processors            46    RUNNING   42  STOPPED    3  INVALID    0  DISABLED   1              │"
"│  Controller services   12    ENABLED   12  DISABLED   0  INVALID    0                            │"
"│  Remote PGs             0    TRANSMIT   0  NOT-TX     0                                          │"
"│  Reporting tasks        ?    rt list unavailable                                                 │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Nodes ───────────────────────────────────────────────────────────────────────────────────────────┐"
"│  loading system diagnostics…                                                                     │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Bulletins / min ───────────────────────────────┐┌ Noisy components ──────────────────────────────┐"
"│15m  no bulletins                               ││cnt  source                             worst   │"
"│                                                ││     no bulletins yet                           │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘"
"┌ Unhealthy queues ────────────────────────────────────────────────────────────────────────────────┐"
"│fill  queue                             src → dst                                         ffiles  │"
"│                                        no queues reported yet                                    │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
