src/view/overview/render/snapshots/nifi_lens__view__overview__render__tests__overview_empty.snap
---
source: src/view/overview/render/tests.rs
expression: render_to_string(&state)
---
"┌ Components ──────────────────────────────────────────────────────────────────────────────────────┐"
"│loading…                                                                                          │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Nodes ───────────────────────────────────────────────────────────────────────────────────────────┐"
"│  loading system diagnostics…                                                                     │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Bulletins / min ───────────────────────────────┐┌ Noisy components ──────────────────────────────┐"
"│15m  no bulletins                               ││cnt  source                             worst   │"
"│                                                ││     no bulletins yet                           │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘"
"┌ Unhealthy queues ────────────────────────────────────────────────────────────────────────────────┐"
"│fill  queue                             src → dst                                         ffiles  │"
"│                                        no queues reported yet                                    │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
