src/view/overview/render/snapshots/nifi_lens__view__overview__render__tests__overview_standalone_no_badges.snap
---
source: src/view/overview/render/tests.rs
expression: render_to_string(&state.overview)
---
"┌ Components ──────────────────────────────────────────────────────────────────────────────────────┐"
"│  Process groups         5    all in sync   INPUTS     2  OUTPUTS    1                            │"
"│  Processors            46    RUNNING   42  STOPPED    3  INVALID    0  DISABLED   1              │"
"│  Controller services    ?    cs list unavailable                                                 │"
"│  Remote PGs             0    TRANSMIT   0  NOT-TX     0                                          │"
"│  Reporting tasks        ?    rt list unavailable                                                 │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Nodes (2 connected) ─────────────────────────────────────────────────────────────────────────────┐"
"│  node1:8080                          heap ██░░░  50% gc   50ms       load 0.38  1.5              │"
"│  node2:8080                          heap ██░░░  50% gc   50ms       load 0.38  1.5              │"
"│  repositories                        cont ███░░  60% ff  █░░░░  30%  prov ░░░░  20%              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Bulletins / min ───────────────────────────────┐┌ Noisy components ──────────────────────────────┐"
"│15m  no bulletins                               ││cnt  source                             worst   │"
"│                                                ││     no bulletins yet                           │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘"
"┌ Unhealthy queues ────────────────────────────────────────────────────────────────────────────────┐"
"│fill  queue                             src → dst                                         ffiles  │"
"│                                        no queues reported yet                                    │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
