src/view/overview/render/snapshots/nifi_lens__view__overview__render__tests__overview_unhealthy.snap
---
source: src/view/overview/render/tests.rs
expression: render_to_string(&state)
---
"┌ Components ──────────────────────────────────────────────────────────────────────────────────────┐"
"│  Process groups         4    all in sync   INPUTS     0  OUTPUTS    0                            │"
"│  Processors            32    RUNNING   20  STOPPED   10  INVALID    2  DISABLED   0              │"
"│  Controller services    8    ENABLED    6  DISABLED   1  INVALID    1                            │"
"│  Remote PGs             0    TRANSMIT   0  NOT-TX     0                                          │"
"│  Reporting tasks        ?    rt list unavailable                                                 │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Nodes ───────────────────────────────────────────────────────────────────────────────────────────┐"
"│  loading system diagnostics…                                                                     │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Bulletins / min ───────────────────────────────┐┌ Noisy components ──────────────────────────────┐"
"│15m  ■ Err  ■ Warn  ■ Info                      ││cnt  source                             worst   │"
"│████████████████████████████████                ││  2  Proc0                              Error   │"
"│████████████████████████████████                ││  2  Proc1                              Error   │"
"│████████████████████████████████                ││  2  Proc2                              Error   │"
"│←1m                                     now→    ││                                                │"
"└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘"
"┌ Unhealthy queues ────────────────────────────────────────────────────────────────────────────────┐"
"│fill  queue                             src → dst                                         ffiles  │"
"│ 99%  q0                                Generate → Proc0                                  9000    │"
"│ 98%  q1                                Generate → Proc1                                  9100    │"
"│ 97%  q2                                Generate → Proc2                                  9200    │"
"│ 96%  q3                                Generate → Proc3                                  9300    │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
