src/view/overview/render/snapshots/nifi_lens__view__overview__render__tests__reporting_tasks_row_populated.snap
---
source: src/view/overview/render/tests.rs
expression: out
---
"┌ Components ──────────────────────────────────────────────────────────────────────────────────────┐"
"│  Process groups         0    all in sync   INPUTS     0  OUTPUTS    0                            │"
"│  Processors             0    RUNNING    0  STOPPED    0  INVALID    0  DISABLED   0              │"
"│  Controller services    0    ENABLED    0  DISABLED   0  INVALID    0                            │"
"│  Remote PGs             0    TRANSMIT   0  NOT-TX     0                                          │"
"│  Reporting tasks        5    RUNNING    4  STOPPED    0  INVALID    1  [t]                       │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Nodes ───────────────────────────────────────────────────────────────────────────────────────────┐"
"│  loading system diagnostics…                                                                     │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Bulletins / min ───────────────────────────────┐┌ Noisy components ──────────────────────────────┐"
"│15m  no bulletins                               ││cnt  source                             worst   │"
"│                                                ││     no bulletins yet                           │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘"
"┌ Unhealthy queues ────────────────────────────────────────────────────────────────────────────────┐"
"│fill  queue                             src → dst                                         ffiles  │"
"│                                        no queues reported yet                                    │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
